# datagouv-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  agents.md  docker-compose.yml  main.py  pyproject.toml
.circleci/: config.yml
.codex/skills/: _index.md  api-client-integration.md  mcp-tool-development.md  release-versioning.md  testing-and-validation.md
.cursor/rules/: client-config.md  developer-notes.md  overview.md
.github/workflows/: ci.yml
helpers/: crawler_api_client.py  datagouv_api_client.py  debug_memory.py  env_config.py  formatting.py  health_probe.py  logging.py  matomo.py  mcp_client.py  metrics_api_client.py  sentry.py  tabular_api_client.py
mcp_resources/: __init__.py  catalog_overview.py
scripts/: call_tool.py
tests/: conftest.py  test_catalog_overview_resource.py  test_crawler_api.py  test_crawler_api_unit.py  test_create_dataset.py  test_datagouv_api.py  test_datagouv_api_client.py  test_datagouv_api_unit.py  test_deep_health.py  test_download_and_parse_resource_unit.py  test_env_config.py  test_formatting.py  test_health_check.py  test_health_endpoint.py  test_mcp_server.py  test_metrics_api.py  test_metrics_api_unit.py  test_parse_zip.py  test_prefab_tool_helpers.py  test_search_tools_unit.py  test_stress.py  test_tabular_api.py  test_tabular_api_client_errors.py  test_tabular_api_unit.py  test_tool_logging.py
tools/: __init__.py  create_dataset.py  download_and_parse_resource.py  get_dataservice_info.py  get_dataservice_openapi_spec.py  get_dataset_info.py  get_metrics.py  get_resource_info.py  list_dataset_resources.py  query_dataset_data.py  query_resource_data.py  search_dataservices.py  search_datasets.py  search_organizations.py
