[project]
name = "datagouv-mcp"
dynamic = ["version"]
description = "Model Context Protocol (MCP) server for interacting with data.gouv.fr datasets and resources via LLM chatbots"
authors = [
    {name = "data.gouv.fr", email = "opendatateam@data.gouv.fr"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiohttp>=3.13.2",
    "mcp>=1.22.0",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
